--- a/templates/configmap.yaml
+++ b/templates/configmap.yaml
@@ -1,11 +1,16 @@
+{{- if .Values.configMap.create }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: nodejs-helm-template-env
-  namespace: nodejs-helm-template
+  name: {{ include "nodejs-helm-template.configMapName" . }}
+  labels:
+    {{- include "nodejs-helm-template.labels" . | nindent 4 }}
+{{- if .Values.configMap.data }}
 data:
-  db_host: "172.16.2.200"
-  db_user: "docker"
-  db_password: "00000000"
-  port: "{{ .Values.application.port }}"
-  dev_dev: "4006"
+  {{- range $key, $value := .Values.configMap.data }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
+{{- else }}
+data: {}
+{{- end }}
+{{- end }}
