--- a/templates/httproute.yaml
+++ b/templates/httproute.yaml
@@ -1,9 +1,13 @@
 {{- if .Values.gateway.enabled -}}
 {{- $fullName := include "nodejs-helm-template.fullname" . -}}
 {{- $svcPort := .Values.service.port -}}
+{{- $defaultHostname := "unset-hostname" -}}
+{{- if gt (len .Values.gateway.routes) 0 -}}
+{{- $defaultHostname = (index .Values.gateway.routes 0).hostname -}}
+{{- end -}}
 
 # ============================================================
-# 主要路由: {{ (index .Values.gateway.routes 0).hostname }}
+# 主要路由: {{ $defaultHostname }}
 # ============================================================
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
