--- a/values.yaml
+++ b/values.yaml
@@ -38,7 +38,12 @@ configMap:
   create: true
   # 空字串時會使用: <release-fullname>-env
   name: ""
-  data: {}
+  data:
+    db_host: "172.16.2.200"
+    db_user: "docker"
+    db_password: "00000000"
+    port: "3011"
+    dev_dev: "4006"
 
 envFrom:
   configMap:
