--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -5,6 +5,13 @@ metadata:
   labels:
     {{- include "nodejs-helm-template.labels" . | nindent 4 }}
 spec:
+  strategy:
+    type: {{ .Values.updateStrategy.type | default "RollingUpdate" }}
+    {{- if eq (.Values.updateStrategy.type | default "RollingUpdate") "RollingUpdate" }}
+    rollingUpdate:
+      maxUnavailable: {{ .Values.updateStrategy.maxUnavailable | default 0 }}
+      maxSurge: {{ .Values.updateStrategy.maxSurge | default 1 }}
+    {{- end }}
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
@@ -14,6 +21,9 @@ spec:
   template:
     metadata:
       annotations:
+        {{- if .Values.configMap.create }}
+        checksum/configmap: {{ include (print $.Template.BasePath "/configmap.yaml") . | sha256sum }}
+        {{- end }}
         {{- if .Values.otel.enabled }}
         {{ .Values.otel.injectorAnnotationKey }}: {{ .Values.otel.injectorAnnotationValue | quote }}
         {{- end }}
