--- a/values.yaml
+++ b/values.yaml
@@ -113,6 +113,11 @@ autoscaling:
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
 
+updateStrategy:
+  type: RollingUpdate
+  maxUnavailable: 0
+  maxSurge: 1
+
 nodeSelector:
   workload: app
 tolerations: []
