--- a/values.yaml
+++ b/values.yaml
@@ -39,11 +39,11 @@ configMap:
   # 空字串時會使用: <release-fullname>-env
   name: ""
   data:
-    db_host: "172.16.2.200"
-    db_user: "docker"
-    db_password: "00000000"
-    port: "3011"
-    dev_dev: "4006"
+    DB_HOST: "172.16.2.200"
+    DB_USER: "docker"
+    DB_PASSWORD: "00000000"
+    PORT: "3011"
+    DEV_PORT: "4006"
 
 envFrom:
   configMap:
