--- a/values.yaml
+++ b/values.yaml
@@ -108,7 +108,7 @@ resources: {}
 
 # ---------- Autoscaling ----------
 autoscaling:
-  enabled: false
+  enabled: true
   minReplicas: 3
   maxReplicas: 100
   targetCPUUtilizationPercentage: 80
