--- a/values.nodejs-helm-bn-template.yaml
+++ b/values.nodejs-helm-bn-template.yaml
@@ -15,8 +15,15 @@ serviceAccount:
   name: ""
 
 podAnnotations: {}
-podSecurityContext: {}
-securityContext: {}
+podSecurityContext:
+  runAsNonRoot: true
+  seccompProfile:
+    type: RuntimeDefault
+securityContext:
+  allowPrivilegeEscalation: false
+  capabilities:
+    drop:
+      - ALL
 
 otel:
   enabled: true
@@ -48,7 +55,7 @@ resources: {}
 
 autoscaling:
   enabled: true
-  minReplicas: 6
+  minReplicas: 2
   maxReplicas: 10
   targetCPUUtilizationPercentage: 80
 
