--- a/values.nodejs-helm-bn-template.yaml
+++ b/values.nodejs-helm-bn-template.yaml
@@ -16,7 +16,7 @@ serviceAccount:
 
 podAnnotations: {}
 podSecurityContext:
-  runAsNonRoot: true
+  runAsNonRoot: false
   seccompProfile:
     type: RuntimeDefault
 securityContext:
