--- a/values.project-template.yaml
+++ b/values.project-template.yaml
@@ -16,7 +16,7 @@ serviceAccount:
 
 podAnnotations: {}
 podSecurityContext:
-  runAsNonRoot: true
+  runAsNonRoot: false
   seccompProfile:
     type: RuntimeDefault
 securityContext:
