--- a/values.project-template.yaml
+++ b/values.project-template.yaml
@@ -15,6 +15,8 @@ serviceAccount:
   name: ""
 
 podAnnotations: {}
+podLabels:
+  observability: enabled
 podSecurityContext:
   runAsNonRoot: false
   seccompProfile:
