--- a/values.project-template.yaml
+++ b/values.project-template.yaml
@@ -15,8 +15,6 @@ serviceAccount:
   name: ""
 
 podAnnotations: {}
-podLabels:
-  observability: enabled
 podSecurityContext:
   runAsNonRoot: false
   seccompProfile:
@@ -58,13 +56,13 @@ envFrom:
 
 # ---------- Resources ----------
 resources: {}
-# resources:
-#   limits:
-#     cpu: 500m
-#     memory: 512Mi
-#   requests:
-#     cpu: 100m
-#     memory: 128Mi
+resources:
+  limits:
+    cpu: 200m
+    memory: 1024Mi
+  requests:
+    cpu: 50m
+    memory: 256Mi
 
 # ---------- Autoscaling ----------
 autoscaling:
