--- a/values.nodejs-fn-template.yaml
+++ b/values.nodejs-fn-template.yaml
@@ -32,7 +32,7 @@ envFrom:
   configMapRefs: []
   secretRefs: []
 
-# ---------- Gateway API (取代 nginx-ingress) ----------
+# ---------- Gateway API ----------
 gateway:
   enabled: true
   gatewayName: traefik-gateway
@@ -116,6 +116,19 @@ otel:
   enabled: true
   injectorAnnotationKey: instrumentation.opentelemetry.io/inject-nodejs
   injectorAnnotationValue: "true"
+  instrumentation:
+    enabled: true
+    name: otel-instrumentation
+    syncWave: "-1"
+    exporter:
+      endpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318
+    nodejs:
+      image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-nodejs:latest
+      protocol: http/protobuf
+      tracesEndpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318/v1/traces
+      serviceName: ""
+      metricsExporter: otlp
+      metricsEndpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318/v1/metrics
 
 imagePullSecrets: []
 nameOverride: ""
