--- a/values.nodejs-fn-template.yaml
+++ b/values.nodejs-fn-template.yaml
@@ -113,7 +113,7 @@ affinity: {}
 
 # 收 Trace Log 到 Tempo
 otel:
-  enabled: true
+  enabled: false
   injectorAnnotationKey: instrumentation.opentelemetry.io/inject-nodejs
   injectorAnnotationValue: "true"
   instrumentation:
