--- a/values.nodejs-bn-template.yaml
+++ b/values.nodejs-bn-template.yaml
@@ -70,7 +70,7 @@ healthCheckPolicy:
   unhealthyThreshold: 2
 
 otel:
-  enabled: true
+  enabled: false
   injectorAnnotationKey: instrumentation.opentelemetry.io/inject-nodejs
   injectorAnnotationValue: "true"
   instrumentation:
@@ -80,7 +80,7 @@ otel:
     exporter:
       endpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318
     nodejs:
-      image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-nodejs:latest
+      image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-nodejs:0.64.1
       protocol: http/protobuf
       tracesEndpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318/v1/traces
       serviceName: ""
