--- a/values.nodejs-fn-template.yaml
+++ b/values.nodejs-fn-template.yaml
@@ -111,24 +111,12 @@ nodeSelector:
 tolerations: []
 affinity: {}
 
-# 收 Trace Log 到 Tempo
+# 收 Trace Log 到 Tempo (由 Platform 端管理 Instrumentation CR)
+# 設為 true 後 Pod 會自動被注入 OTel auto-instrumentation SDK
 otel:
   enabled: false
   injectorAnnotationKey: instrumentation.opentelemetry.io/inject-nodejs
   injectorAnnotationValue: "true"
-  instrumentation:
-    enabled: true
-    name: otel-instrumentation
-    syncWave: "-1"
-    exporter:
-      endpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318
-    nodejs:
-      image: ghcr.io/open-telemetry/opentelemetry-operator/autoinstrumentation-nodejs:0.64.1
-      protocol: http/protobuf
-      tracesEndpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318/v1/traces
-      serviceName: ""
-      metricsExporter: otlp
-      metricsEndpoint: http://otel-collector-opentelemetry-collector.observability.svc.cluster.local:4318/v1/metrics
 
 imagePullSecrets: []
 nameOverride: ""
