--- a/values.nodejs-fn-template.yaml
+++ b/values.nodejs-fn-template.yaml
@@ -114,9 +114,9 @@ affinity: {}
 # 收 Trace Log 到 Tempo (由 Platform 端管理 Instrumentation CR)
 # 設為 true 後 Pod 會自動被注入 OTel auto-instrumentation SDK
 otel:
-  enabled: false
+  enabled: true
   injectorAnnotationKey: instrumentation.opentelemetry.io/inject-nodejs
-  injectorAnnotationValue: "true"
+  injectorAnnotationValue: "otel-instrumentation"
 
 imagePullSecrets: []
 nameOverride: ""
